fix: 增加 h1 更新日期的 z-index 值

--- a/style.css
+++ b/style.css
@@ -1196,7 +1196,7 @@ h1 .update-date {
     top: 0;
     left: 0;
     pointer-events: none;
-    z-index: 99999;
+    z-index: 999999;
     transform: translate(-50%, -50%);
     display: none;
 }
